{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "ad5ae095-6aa6-4c7b-be99-426fde5d1a3f",
            "actions": [
                {
                    "name": "JumpHold",
                    "type": "PassThrough",
                    "id": "202a9bcf-77cd-45e5-bcb0-10bec38e97ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.02)"
                },
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "d5e1f86d-b868-4274-922c-a1528029cd5e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "PassThrough",
                    "id": "22cb2bf5-25ec-49fd-922e-b7ab92b21690",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                },
                {
                    "name": "Map",
                    "type": "Button",
                    "id": "1e435edb-1d97-404c-9797-13003072f0a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SpellHold",
                    "type": "Button",
                    "id": "b1f83997-2610-4398-a3a4-77aec2d9aae9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                },
                {
                    "name": "SpellPress",
                    "type": "PassThrough",
                    "id": "8bb40f4d-b6c3-4100-8c99-4ef7745ad27f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "AttackPress",
                    "type": "PassThrough",
                    "id": "10a31ae5-3bb3-4de3-8702-ed30ed371a10",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.3)"
                },
                {
                    "name": "Open Inventory",
                    "type": "Button",
                    "id": "bf5e880e-dde9-40b2-987c-14dd243e8d95",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.3)"
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "64857468-a156-47f8-8f1e-3d20578d0e7e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "78488960-ea9a-4d9a-8477-d3865a166ec8",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "a0d4ac71-3945-4b23-b1aa-abb03a06af91",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "91e776ea-caa9-430b-b5d6-569b6c0a1e24",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "08861d74-fd17-4c3b-a45f-276f6674e83b",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a062e92a-6b8d-4aa8-a3bc-b63b3de40b37",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "fdc7cfa9-2bd8-4e89-bc4f-8594da3c9c5c",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ba9344b6-950d-43f1-ae1e-1f199917cc9d",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "341ed441-bf5e-48be-bee3-570b02dc3c01",
                    "path": "<DualShockGamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2faf5e46-0292-49f7-9908-b5ba169cc72e",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ded24822-ce23-4bd3-8ba7-ee2ebbf91243",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89ec05f4-52cc-438a-8623-bece353e5c84",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cdb8f4db-f088-4170-b5a9-06e395513830",
                    "path": "<DualShockGamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ec247c4-2b5c-41c5-b1f7-d82aeb5794e8",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52fbec2b-72f0-4d9e-9893-b2d5d1a26483",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dbb507a0-09a0-4b5a-931d-64672f992434",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d4ce60a-954e-4e3a-843e-867eb9b6c357",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35d4c127-edcf-492b-b91e-e3dac3df8504",
                    "path": "<DualShockGamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "621e0dc1-09da-4527-b7ef-f5b3386b642e",
                    "path": "<XInputController>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "75d02384-cf32-4d42-840a-4e447eec0258",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Map",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5bbebcb8-fca9-48e4-a898-a89b0c8a9c0f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpellHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d8a50c6-77d7-4547-b03c-468e0207d8b7",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpellPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c070d1b8-54b1-4b11-9d00-f4514acb714c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpellPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79da9319-2a5d-44e8-9201-53d344323df6",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9111604-840e-469f-8276-94759c5d8e8a",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7cc6fbac-94b8-40fe-a2ca-dd97f98c21ab",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64d8566b-6590-4875-be5a-98756b9ea57a",
                    "path": "<DualShockGamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e7dac75-2177-4fb5-a376-abc1bc031d8c",
                    "path": "<DualShockGamepad>/touchpadButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Open Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ebdd0c18-ae95-492f-9a7c-2cf692686a04",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7bdabd69-64c7-4b29-b88d-aaa3b83fb444",
                    "path": "<DualShockGamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d4f435f-4a00-4f96-8514-41c0670bf22f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7f5c696-cbe1-4ee2-9b53-2faeeef99b24",
                    "path": "<XInputController>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}